k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: i69app
  labels:
    lab: api
spec:
  replicas: 1
  selector:
    matchLabels:
      lab: api
  template:
    metadata:
      labels:
        lab: api
    spec:
      containers:
        - name: api
          image: __REPLACE_IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
          - mountPath: /home/i69/media
            name: media-nfs
          livenessProbe:
            httpGet:
              path: /admin/login/?next=/admin/
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
      imagePullSecrets:
      - name: i69
      volumes:
      - name: media-nfs
        nfs:
          path: /exports/api/media
          server: 10.114.0.7
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: i69app
  labels:
    lab: api
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    lab: api
