k8s/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: i69app
  labels:
    lab: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      lab: redis
  template:
    metadata:
      labels:
        lab: redis
    spec:
      containers:
        - name: redis
          image: __REPLACE_REDIS_IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
      imagePullSecrets:
      - name: i69
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: i69app
  labels:
    lab: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    lab: redis
