k8s/websocket-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
  namespace: i69app
  labels:
    lab: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      lab: websocket
  template:
    metadata:
      labels:
        lab: websocket
    spec:
      containers:
        - name: websocket
          image: __REPLACE_IMAGE__
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: i69
---
apiVersion: v1
kind: Service
metadata:
  name: websocket
  namespace: i69app
  labels:
    lab: websocket
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    lab: websocket
