k8s/ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
	nginx.ingress.kubernetes.io/proxy-body-size: 0
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      more_set_headers 'Access-Control-Allow-Origin: *';
      more_set_headers 'Access-Control-Allow-Credentials: true';
      more_set_headers 'Access-Control-Allow-Methods: PUT, GET, PATCH, DELETE, POST, OPTIONS';
      more_set_headers 'Access-Control-Allow-Headers: *';
      # Cors Preflight methods needs additional options and different Return Code - UPDATED
      if ($request_method = 'OPTIONS') {
      more_set_headers 'Access-Control-Max-Age: 1728000';
      more_set_headers 'Content-Type: text/plain charset=UTF-8';
      more_set_headers 'Content-Length: 0';
      return 204;
      }
  name: api
  namespace: i69app
spec:
  tls:
    - hosts:
        - api.i69app.com
      secretName: api-tls
  rules:
    - host: api.i69app.com
      http:
        paths: 
        - backend:
            service:
              name: api
              port:
                number: 80
          path: /
          pathType: Prefix
